--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -251,7 +251,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,7 +266,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -303,7 +303,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -375,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,7 +437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -480,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -513,47 +513,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "list"
+       "array([False, False, False, ..., False, False, False])"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "type(indices)"
+    "# get indices of false Positives \n",
+    "indices = returnFalsePositivesIndex (y_test_2, y_pred_test_2)\n",
+    "\n",
+    "# change false Positives to true in y_2\n",
+    "\n",
+    "X_2.loc[X_2.index.isin(indices), 'poisonous'] = 1\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def modify_X(X, y, n):\n",
+    "    \n",
+    "    y = pd.DataFrame(y)\n",
+    "    \n",
+    "    for i in range(n):   \n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1337)\n",
+    "        \n",
+    "        random_forest_pipe.fit(X_train, y_train)\n",
+    "\n",
+    "        y_pred = random_forest_pipe.predict(X_test)\n",
+    "\n",
+    "        indices = returnFalsePositivesIndex (y_test, y_pred)\n",
+    "\n",
+    "        y.loc[pd.DataFrame(y).index.isin(indices), 'poisonous'] = 1\n",
+    "\n",
+    "    return y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "list"
-      ]
-     },
-     "execution_count": 79,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
+      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
+      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
+      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n",
+      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n"
+     ]
     }
    ],
    "source": [
-    "type(list(pd.DataFrame(y_2).index))"
+    "y_final = modify_X(X_2, y_2, 5)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [
     {
@@ -577,131 +612,227 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>0</th>\n",
+       "      <th>original</th>\n",
+       "      <th>modified</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>False</td>\n",
+       "      <th>250</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>False</td>\n",
+       "      <th>415</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>False</td>\n",
+       "      <th>450</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>False</td>\n",
+       "      <th>455</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>False</td>\n",
+       "      <th>682</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
+       "      <th>842</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6494</th>\n",
-       "      <td>False</td>\n",
+       "      <th>963</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6495</th>\n",
-       "      <td>False</td>\n",
+       "      <th>1042</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6496</th>\n",
-       "      <td>False</td>\n",
+       "      <th>1055</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6497</th>\n",
-       "      <td>False</td>\n",
+       "      <th>1286</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6498</th>\n",
-       "      <td>False</td>\n",
+       "      <th>2138</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2160</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2174</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2292</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2364</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2783</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2788</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3008</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3858</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3872</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3950</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4309</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4574</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4647</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5140</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5179</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5264</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5824</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6041</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6099</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6191</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6258</th>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>6499 rows × 1 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "          0\n",
-       "0     False\n",
-       "1     False\n",
-       "2     False\n",
-       "3     False\n",
-       "4     False\n",
-       "...     ...\n",
-       "6494  False\n",
-       "6495  False\n",
-       "6496  False\n",
-       "6497  False\n",
-       "6498  False\n",
-       "\n",
-       "[6499 rows x 1 columns]"
+       "      original  modified\n",
+       "250          0         1\n",
+       "415          0         1\n",
+       "450          0         1\n",
+       "455          0         1\n",
+       "682          0         1\n",
+       "842          0         1\n",
+       "963          0         1\n",
+       "1042         0         1\n",
+       "1055         0         1\n",
+       "1286         0         1\n",
+       "2138         0         1\n",
+       "2160         0         1\n",
+       "2174         0         1\n",
+       "2292         0         1\n",
+       "2364         0         1\n",
+       "2783         0         1\n",
+       "2788         0         1\n",
+       "3008         0         1\n",
+       "3858         0         1\n",
+       "3872         0         1\n",
+       "3950         0         1\n",
+       "4309         0         1\n",
+       "4574         0         1\n",
+       "4647         0         1\n",
+       "5140         0         1\n",
+       "5179         0         1\n",
+       "5264         0         1\n",
+       "5824         0         1\n",
+       "6041         0         1\n",
+       "6099         0         1\n",
+       "6191         0         1\n",
+       "6258         0         1"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "pd.DataFrame(np.isin(list(pd.DataFrame(y_2).index), indices))\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 74,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# get indices of false Positives \n",
     "\n",
-    "indices = returnFalsePositivesIndex (y_test_2, y_pred_test_2)\n",
+    "comparison = pd.concat([y, y_final], axis = 1)\n",
     "\n",
-    "# change false Positives to true in y_2\n",
+    "comparison.columns.values[0] = 'original'\n",
+    "comparison.columns.values[1] = 'modified'\n",
     "\n",
-    "\n",
-    "np.isin(list(pd.DataFrame(y_2).index), indices)\n",
-    "\n",
-    "where(pd.DataFrame(y_2) )\n",
-    "\n",
-    "\n",
-    "y_2 = (\n",
-    "    pd\n",
-    "    .merge(pd.DataFrame(y_2), pd.DataFrame(indices), left_index=True, right_index=True, how='left')[['Id', 'poisonous_y']]\n",
-    "    .rename(columns={\"poisonous_y\": \"poisonous\"})\n",
+    "(\n",
+    "    comparison\n",
+    "        .loc[comparison['original'] != comparison['modified'], :]\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# XGBoost"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# xgboost = XGBClassifier(random_state=1337)\n",
-    "# xgboost.fit(X_train.to_numpy(), y_train.to_numpy())\n",
-    "\n",
-    "# y_pred_train = xgboost.predict(X_train.to_numpy())\n",
-    "# y_pred_test = xgboost.predict(X_test.to_numpy())\n",
-    "\n",
-    "# print('Accuracy on train-set: ', accuracy_score(y_true = y_train.to_numpy(), y_pred = y_pred_train))\n",
-    "# print('Accuracy on test-set: ', accuracy_score(y_true = y_test.to_numpy(), y_pred = y_pred_test))"
    ]
   },
   {
@@ -742,9 +873,7 @@
     }
    ],
    "source": [
-    "plotAUROC(random_forest_pipe, X_test, y_test)\n",
-    "# plotAUROC(xgboost, X_test.to_numpy(), y_test.to_numpy())\n",
-    "plotAUROC(gridsearch_result, X_test, y_test)"
+    "plotAUROC(random_forest_pipe, X_test, y_test)"
    ]
   },
   {
@@ -816,17 +945,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\tobia\\miniconda3\\envs\\home\\lib\\site-packages\\sklearn\\pipeline.py:382: DataConversionWarning: A column-vector y was passed when a 1d array was expected. Please change the shape of y to (n_samples,), for example using ravel().\n",
+      "  self._final_estimator.fit(Xt, y, **fit_params_last_step)\n"
+     ]
+    }
+   ],
    "source": [
-    "random_forest_pipe.fit(X, y)\n",
+    "random_forest_pipe.fit(X, y_final)\n",
     "y_pred_final = random_forest_pipe.predict(X_test_final)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
