--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -437,27 +437,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
     "random_forest_pipe = Pipeline(steps=[\n",
     "    ('preprocessor', preprocessor),\n",
-    "    ('classifier', RandomForestClassifier(random_state=1337))\n",
+    "    ('classifier', RandomForestClassifier(random_state=1337,\n",
+    "                                          class_weight = {0: 1, 1: 10}))\n",
     "    ])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Accuracy on train-set:  0.9615310636660896\n",
-      "Accuracy on test-set:  0.9584615384615385\n"
+      "Accuracy on train-set:  0.9422965954991345\n",
+      "Accuracy on test-set:  0.9515384615384616\n"
      ]
     }
    ],
@@ -823,7 +824,6 @@
     }
    ],
    "source": [
-    "\n",
     "comparison = pd.concat([y, y_final], axis = 1)\n",
     "\n",
     "comparison.columns.values[0] = 'original'\n",
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
