fix bug in modify_x function

--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -551,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -564,7 +564,10 @@
     "        \n",
     "        random_forest_pipe.fit(X_train, y_train)\n",
     "\n",
-    "        y_pred = random_forest_pipe.predict(X_test)\n",
+    "        try:\n",
+    "            y_pred = random_forest_pipe.predict(X_test)\n",
+    "        except ValueError:\n",
+    "            continue\n",
     "\n",
     "        indices = returnFalsePositivesIndex (y_test, y_pred)\n",
     "\n",
@@ -575,7 +578,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
