--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -9,49 +9,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Tobi\n",
-    "\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "import sklearn.metrics as metrics\n",
-    "from xgboost import XGBClassifier\n",
-    "from sklearn.feature_selection import VarianceThreshold, SelectFromModel"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Simon\n",
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
+    "\n",
+    "import sklearn.metrics as metrics\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.pipeline import make_pipeline\n",
+    "from sklearn.compose import ColumnTransformer\n",
     "from sklearn.pipeline import Pipeline\n",
     "from sklearn.impute import SimpleImputer\n",
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import roc_auc_score\n",
-    "from sklearn.metrics import roc_curve\n",
+    "from sklearn.preprocessing import OneHotEncoder, OrdinalEncoder\n",
     "from sklearn.model_selection import GridSearchCV\n",
-    "from sklearn.preprocessing import OneHotEncoder\n",
-    "from sklearn.preprocessing import OrdinalEncoder\n",
-    "from sklearn.compose import ColumnTransformer\n",
-    "from sklearn.tree import plot_tree\n",
-    "from sklearn.tree import DecisionTreeClassifier"
+    "from sklearn.feature_selection import VarianceThreshold, SelectFromModel\n",
+    "\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier, plot_tree"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Data Analysis Tobi"
+    "# Data Exploration"
    ]
   },
   {
@@ -60,6 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# import train and test-datasets\n",
     "mushrooms_train = pd.read_csv('data/train.csv')\n",
     "mushrooms_test = pd.read_csv('data/test.csv')"
    ]
@@ -166,6 +151,7 @@
     }
    ],
    "source": [
+    "# check value counts for the different features\n",
     "for column in mushrooms_train.columns:\n",
     "    print(column, '\\n', mushrooms_train[column].value_counts().sort_values(ascending=False), '\\n')"
    ]
@@ -212,6 +198,7 @@
     }
    ],
    "source": [
+    "# check for missing values\n",
     "for column in mushrooms_test.columns:\n",
     "    print(column, '\\n', mushrooms_test[column].isna().sum(), '\\n')"
    ]
@@ -220,7 +207,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Preprocessor pipe"
+    "# Preprocessor pipe\n",
+    "* preprocessor transforms all features to numerical via onehotencoding to allow application of machine-learning models"
    ]
   },
   {
@@ -229,8 +217,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# pick features to transform\n",
     "columns = mushrooms_train.columns[:-2]\n",
     "\n",
+    "# create a pipeline for the transformation\n",
     "cat_pipe = Pipeline(steps= [\n",
     "    ('transformer', OneHotEncoder())\n",
     "    ])\n",
@@ -255,34 +245,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Split in features and target\n",
+    "# split in features and target\n",
     "X = mushrooms_train.drop(['poisonous'], axis=1)\n",
     "y = mushrooms_train['poisonous']\n",
     "\n",
-    "# copy for manual false Positives Tuning\n",
+    "# copy for manual false positives tuning\n",
     "X_2 = X.copy()\n",
-    "y_2 = y.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "y_2 = y.copy()\n",
+    "\n",
     "# Preprocess train data\n",
     "X.drop('Id', axis=1, inplace = True)\n",
     "\n",
     "# Split in train and test data\n",
-    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1337)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=1337)\n",
+    "\n",
     "# Preprocess final test data\n",
     "X_test_final = mushrooms_test.drop(['Id'], axis=1)"
    ]
@@ -307,6 +283,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "Function to plot the AUROC curve for a model.\n",
+    "Takes the model, the X_test and y_test data as input.\n",
+    "Returns None, but shows the AUROC plot.\n",
+    "'''\n",
+    "\n",
     "def plotAUROC(model, X_test, y_test):\n",
     "    probs = model.predict_proba(X_test)\n",
     "    preds = probs[:,1]\n",
@@ -337,6 +319,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "'''\n",
+    "Function to get the confusion matrix for a model with the appropriate labels.\n",
+    "Takes y_test and y_pred as input.\n",
+    "Returns the labelled confusion matrix.\n",
+    "'''\n",
+    "\n",
     "def get_confusion_matrix(y, y_pred):\n",
     "    confusion_matrix = pd.DataFrame(metrics.confusion_matrix(y, y_pred),\n",
     "                                    columns=['Predicted Not Poisonous', 'Predicted Poisonous'],\n",
@@ -358,6 +346,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "''' \n",
+    "Function to calculate the false-negative-rate for a model. \n",
+    "Takes y and y_pred as input.\n",
+    "Returns the false-negative-rate.\n",
+    "'''\n",
+    "\n",
     "def calculate_false_negative_rate(y, y_pred):\n",
     "\n",
     "    confusion_matrix = get_confusion_matrix(y, y_pred)\n",
@@ -379,6 +373,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "''' \n",
+    "Function to perform a gridsearch for the best parameters for a model, minimizing the false negative rate.\n",
+    "Takes the parameter name, parameter values, pipeline, X_train, y_train, X_test and y_test as input.\n",
+    "Returns the best parameter value.\n",
+    "'''\n",
+    "\n",
     "def gridsearch(parameter_name, parameter_values, pipeline, X_train, y_train, X_test, y_test):\n",
     "    \n",
     "    best_value = None\n",
@@ -409,11 +409,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def returnFalsePositivesIndex (test, pred_test):\n",
+    "''' \n",
+    "Function to find rows (mushrooms) that are predicted to be poisonous, but are actually edible and return their index.\n",
+    "Takes y and y_pred as input.\n",
+    "Returns a list of indices of the false positives.\n",
+    "'''\n",
+    "\n",
+    "def returnFalsePositivesIndex (y, y_pred):\n",
     "    #get index of false positives\n",
     "    falsePositivesIndex = (\n",
-    "        pd.DataFrame(test)\n",
-    "        .assign(prediction=pred_test)\n",
+    "        pd.DataFrame(y)\n",
+    "        .assign(prediction=y_pred)\n",
     "        .query('poisonous == 0 & prediction == 1')\n",
     "        .index\n",
     "    )\n",
