--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -969,7 +969,7 @@
     "    mushrooms_test\n",
     "    .assign(poisonous=y_pred_final)\n",
     "    [['Id', 'poisonous']]\n",
-    "    .to_csv('submission.csv', index=False)\n",
+    "    .to_csv('data/submission.csv', index=False)\n",
     ")"
    ]
   }
