made some comments

--- a/mushrooms.ipynb
+++ b/mushrooms.ipynb
@@ -428,6 +428,39 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "''' \n",
+    "Function to find rows (mushrooms) that are predicted to be poisonous, but are actually edible and return their index.\n",
+    "Takes y and y_pred as input.\n",
+    "Returns a list of indices of the false positives.\n",
+    "'''\n",
+    "\n",
+    "def modify_y(model, X, y, n):\n",
+    "    \n",
+    "    y = pd.DataFrame(y)\n",
+    "    \n",
+    "    for i in range(n):   \n",
+    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
+    "        \n",
+    "        model.fit(X_train, y_train)\n",
+    "\n",
+    "        try:\n",
+    "            y_pred = model.predict(X_test)\n",
+    "        except ValueError:\n",
+    "            continue\n",
+    "\n",
+    "        indices = returnFalsePositivesIndex (y_test, y_pred)\n",
+    "\n",
+    "        y.loc[pd.DataFrame(y).index.isin(indices), 'poisonous'] = 1\n",
+    "\n",
+    "    return y"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -520,66 +553,6 @@
    "metadata": {},
    "source": [
     "# Change false Positives to true"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train_2, X_test_2, y_train_2, y_test_2 = train_test_split(X_2, y_2, test_size=0.2, random_state=1337)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy on train-set:  0.9451817657241778\n",
-      "Accuracy on test-set:  0.9392307692307692\n"
-     ]
-    }
-   ],
-   "source": [
-    "random_forest_pipe.fit(X_train_2, y_train_2)\n",
-    "\n",
-    "y_pred_train_2 = random_forest_pipe.predict(X_train_2)\n",
-    "y_pred_test_2 = random_forest_pipe.predict(X_test_2)\n",
-    "\n",
-    "print('Accuracy on train-set: ', accuracy_score(y_true = y_train_2, y_pred = y_pred_train_2))\n",
-    "print('Accuracy on test-set: ', accuracy_score(y_true = y_test_2, y_pred = y_pred_test_2))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def modify_X(X, y, n):\n",
-    "    \n",
-    "    y = pd.DataFrame(y)\n",
-    "    \n",
-    "    for i in range(n):   \n",
-    "        X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2)\n",
-    "        \n",
-    "        random_forest_pipe.fit(X_train, y_train)\n",
-    "\n",
-    "        try:\n",
-    "            y_pred = random_forest_pipe.predict(X_test)\n",
-    "        except ValueError:\n",
-    "            continue\n",
-    "\n",
-    "        indices = returnFalsePositivesIndex (y_test, y_pred)\n",
-    "\n",
-    "        y.loc[pd.DataFrame(y).index.isin(indices), 'poisonous'] = 1\n",
-    "\n",
-    "    return y"
    ]
   },
   {
@@ -695,7 +668,7 @@
     }
    ],
    "source": [
-    "y_final = modify_X(X_2, y_2, 50)"
+    "y_final = modify_y(random_forest_pipe, X_2, y_2, 5)"
    ]
   },
   {
@@ -976,7 +949,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.5",
+   "display_name": "Python 3.9.12 ('base')",
    "language": "python",
    "name": "python3"
   },
@@ -990,12 +963,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.9.12"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "f32269641e17bf27d9ca909c2404938da1b1b2df6b9d3f5a88a1b877c863c5b8"
+    "hash": "d12e26f72a40d5c48233c54861fca038d6a92135fc0e5e920944e69c69b6b29d"
    }
   }
  },
